# pland

./: .gitignore  README.md  pyproject.toml
pland/: __main__.py  cli.py  llm.py  schema.py  taskd_client.py  tools.py
pland/workflows/: __init__.py  capture.py  plan.py  revise.py  tickets.py
tests/: sample_prd.md  test_capture_prompts.py
