[project]
name = "pland"
version = "0.1.0"
description = "LLM-powered project planner for taskd"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=1.4.3",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.1",
    "httpx>=0.28",
]

[project.scripts]
pland = "pland.cli:main"
